# airflow-provider-mailtrap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mailtrap_provider/: __init__.py
mailtrap_provider/example_dags/: __init__.py  message_of_the_day.py  send_email.py
mailtrap_provider/hooks/: __init__.py  mailtrap.py
mailtrap_provider/operators/: __init__.py  send_email.py
scripts/: setup-dev.sh  sync-provider.sh
tests/: __init__.py
tests/hooks/: __init__.py  test_mailtrap_hook.py
tests/operators/: __init__.py  test_send_email_operator.py
